# bastion

./: .gitignore  README.md  TOKEN_DISTRIBUTION.md  package-lock.json  package.json
agent/: Cargo.toml  build_output.txt  full_build.txt
agent/amsi-provider/: Cargo.toml  README.md
agent/amsi-provider/src/: lib.rs
agent/src/: ai_manager.rs  api.rs  blocklist.rs  config.rs  dga.rs  dpapi.rs  forensic.rs  hashlist.rs  main.rs  notifier.rs  quarantine.rs  scan_engine.rs  store.rs  toast.rs
agent/src/detectors/: asr.rs  attestation.rs  autoruns.rs  boot_scan.rs  camera_mic.rs  canary.rs  defender.rs  defender_watchdog.rs  dns.rs  etw_file.rs  fim.rs  minifilter_bridge.rs  mod.rs  perf.rs  proc_fp.rs  process_lineage.rs  process_net.rs  registry_decoy.rs  scan_on_write.rs  usb.rs
driver/: BastionFilter.c  BastionFilter.h  BastionFilter.inf  README.md
installer/: install.ps1  install_fixed.ps1  install_new.ps1  install_simple.ps1
public/: manifest.webmanifest
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx  wallet-access-client.tsx
src/app/api/access/confirm/: route.ts
src/app/api/access/request/: route.ts
src/app/api/access/validate/: route.ts
src/app/app/: page.tsx
src/app/app/operator/: page.tsx
src/components/: BastionMark.tsx
src/lib/: license.ts  supabase-server.ts
