[package]
name = "bastion-agent"
version = "0.2.0"
edition = "2021"

[workspace]
members = [".", "amsi-provider"]

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sysinfo = "0.30"
sha2 = "0.10"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
hex = "0.4"
directories = "5"
notify = "6"
ed25519-dalek = { version = "2", features = ["rand_core"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
ferrisetw = "1.2"
windows = { version = "0.56", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Registry",
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_Security_Cryptography",
  "Win32_System_Memory",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
